# rust-learning

./: .gitignore  LICENSE  README.md
guessing_game/src/: main.rs
rcli/: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  test.rest
rcli/fixtures/: blake3.key  blake3.txt  ed25519.pk  ed25519.sk
rcli/src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
rcli/src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
rcli/src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
